Implement and document spacing module (#188)
* Implement and document spacing module

* Use spacing module for all spaces

* Added test for Spacing module

- Additionally, updated package dependencies

* Fix lint build

* Updated Spacing Readme

--- a/docs/_/@components/Header/styles.scss
+++ b/docs/_/@components/Header/styles.scss
@@ -1,6 +1,7 @@
+@value ( spacing-up-8 ) from '@xo-union/tk-css-spacing/lib/variables';
 .article-header {
   &:not(h1) {
-    margin-top: 3rem;
+    margin-top: spacing-up-8;
   }
 
   a {
