--- a/docs/articles/pattern-library/core-components/form-elements/demos/styles.css
+++ b/docs/articles/pattern-library/core-components/form-elements/demos/styles.css
@@ -1,11 +1,11 @@
 @value ( white, jay-lighter-90 ) from '@xo-union/tk-css-colors';
 
 .demo-for-gray-theme {
-  composes: py3 from '@xo-union/tk-css-utilities/lib/spacing';
+  composes: py-base from '@xo-union/tk-css-spacing';
   composes: white-bg from '@xo-union/tk-css-colors/lib/utilities';
 }
 
 .demo-for-white-theme {
-  composes: py3 from '@xo-union/tk-css-utilities/lib/spacing';
+  composes: py-base from '@xo-union/tk-css-spacing';
   composes: jay-lighter-90-bg from '@xo-union/tk-css-colors/lib/utilities';
 }
