--- a/packages/@xo-union/tk-component-fields/src/css/styles/field.scss
+++ b/packages/@xo-union/tk-component-fields/src/css/styles/field.scss
@@ -1,30 +1,25 @@
 @value (
-  red,
-  red-lighter-90,
-  white,
   safe-gray-7,
-  gray-6,
   black,
   green-lighter-80
 ) from '@xo-union/tk-css-colors';
 
 @value ( red-border ) from '../shared/borders';
-@value ( spacer-x ) from '../shared/spacing';
+@value ( font-down-4 ) from '@xo-union/tk-css-typography/lib/sizes';
 
 @value (
-  font-up-1,
-  font-down-4,
-  font-down-2
-) from '@xo-union/tk-css-typography/lib/sizes';
+  spacing-down-1,
+  spacing-down-3
+) from '@xo-union/tk-css-spacing/lib/variables';
 
 .field {
   composes: field-base from '../styles/field-base';
-  padding: 15px .5rem spacer-x;
+  composes: px-down-2 pt-base pb-down-1 from '@xo-union/tk-css-spacing';
 
   &:not(:placeholder-shown) ~ .field-label,
   &:focus ~ .field-label {
     font-size: font-down-4;
-    margin-top: 6px;
+    margin-top: spacing-down-3;
     color: black;
   }
 
@@ -36,8 +31,8 @@
 
 .invalid-field {
   composes: field;
+  composes: red-lighter-90-bg from '@xo-union/tk-css-colors/lib/utilities';
 
-  background-color: red-lighter-90;
   // Annoying that !important is
   // necessary for this to work
   border: red-border !important;
@@ -45,34 +40,32 @@
 }
 
 .valid-field {
+  composes: green-lighter-80-bg from '@xo-union/tk-css-colors/lib/utilities';
   composes: field;
-  background-color: green-lighter-80;
   border-color: green-lighter-80 !important;
 }
 
 .requirements {
-  background-color: red;
-  color: white;
-  font-size: font-down-2;
+  composes: red-bg white-fg from '@xo-union/tk-css-colors/lib/utilities';
+  composes: font-down-2 from '@xo-union/tk-css-typography';
   max-height: 0;
   overflow: hidden;
-  padding: 0 spacer-x;
   transition: all 0.2s ease-out 1.5s;
 }
 
 /* Contextual styles */
 .invalid-field ~ .requirements {
   max-height: 200px;
-  padding: 5px spacer-x 4px;
+  
+  padding: spacing-down-3 spacing-down-1;
 }
 
 .field-label {
   composes: label from '../styles/label';
-
-  font-size: font-up-1;
-  margin-left: .5rem;
-  margin-top: 13px;
-  color: gray-6;
+  composes: ml-down-2 from '@xo-union/tk-css-spacing';
+  composes: font-up-1 from '@xo-union/tk-css-typography';
+  composes: gray-6-fg from '@xo-union/tk-css-colors/lib/utilities';
+  margin-top: spacing-down-1;
   transition: all 0.2s ease-out;
 }
 
