--- a/packages/@xo-union/tk-component-header-nav/src/css/menu-image.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/menu-image.scss
@@ -1,6 +1,8 @@
+@value ( spacing-down-1 ) from '@xo-union/tk-css-spacing/lib/variables';
+
 .has-menu-image {
   img {
     max-height: 15px;
-    margin-right: 10px;
+    margin-right: spacing-down-1;
   }
 }
