--- a/packages/@xo-union/tk-component-header-nav/src/css/resets.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/resets.scss
@@ -1,6 +1,5 @@
 .button-reset {
+  composes: m-0 p-0 from '@xo-union/tk-css-spacing';
   background: none;
   border: 0;
-  padding: 0;
-  margin: 0;
 }
