Chore/refactor css modules (#190)
* WIP

* Establish color variable naming convention of `var-`

This allows collapsing of color modules into one single module

* Upgrade bootstrap and update broken code

Additionally, refactored typography modules to use em's for tag
selectors and rem's for modules

* Fix rendering issue in subnav

* Refactor font-size variables

Rename them to var-fs-{size} and export them from the main file

* Refactor names of spacing variables

Introduce `var-sp-{size}`

* Refactor inclusion of @font-faces

* Remove no-longer needed webpack configurations

* Fix visual bug in Dropdown

* Remove double import of same module

* Remove references to custom font sizes

* Make font scale utilities immutable classes and add breakpoints

* Update spacing hash, remove outdated typography tests

* Fix lint build

Remove css-byebye dependency

* Improve documentation of typography module

* Fix variable name

* Document breakpoint modifier in font-scale classes

Additionally, fixed PropTypes issue.

--- a/docs/_/@components/Header/styles.scss
+++ b/docs/_/@components/Header/styles.scss
@@ -1,7 +1,7 @@
-@value ( spacing-up-8 ) from '@xo-union/tk-css-spacing/lib/variables';
+@value ( var-sp-up-8 ) from '@xo-union/tk-css-spacing';
 .article-header {
   &:not(h1) {
-    margin-top: spacing-up-8;
+    margin-top: var-sp-up-8;
   }
 
   a {
