--- a/packages/@xo-union/tk-component-footer-nav/src/css/application-section.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/application-section.scss
@@ -1,6 +1,6 @@
 .application-section {
   composes: section section-links from './section';
-  composes: background-gray-8-bg from '@xo-union/tk-css-colors/lib/utilities';
+  composes: bg-background-gray-8 from '@xo-union/tk-css-colors';
   composes: flex-wrap from '@xo-union/tk-css-utilities/lib/flexbox';
 }
 
