--- a/packages/@xo-union/tk-css-colors/src/_class_builder.scss
+++ b/packages/@xo-union/tk-css-colors/src/_class_builder.scss
@@ -1,9 +1,9 @@
 @mixin color($name, $value) {
-  .#{$name}-bg {
+  .bg-#{$name} {
     background-color: $value;
   }
 
-  .#{$name}-fg {
+  .fg-#{$name} {
     color: $value;
   }
 }
