--- a/packages/@xo-union/tk-css-spacing/src/_variables.scss
+++ b/packages/@xo-union/tk-css-spacing/src/_variables.scss
@@ -2,6 +2,6 @@
 
 @each $name, $length in $spacers {
   @if ($name != 0) {
-    @value spacing-#{$name} #{map-get($length, x)};
+    @value var-sp-#{$name} #{$length};
   }
 }
