--- a/docs/src/components/HeaderNav/NavItem/styles.css
+++ b/docs/src/components/HeaderNav/NavItem/styles.css
@@ -1,14 +1,14 @@
 @value (
-  black,
-  white,
-  knot-blue-darker-30,
-  knot-blue-darker-60,
-  safe-gray-5
+  var-black,
+  var-white,
+  var-knot-blue-darker-30,
+  var-knot-blue-darker-60,
+  var-safe-gray-5
 ) from '@xo-union/tk-css-colors';
 
-@value item-hover-color: knot-blue-darker-30;
-@value item-active-color: knot-blue-darker-60;
-@value item-disabled-color: safe-gray-5;
+@value item-hover-color: var-knot-blue-darker-30;
+@value item-active-color: var-knot-blue-darker-60;
+@value item-disabled-color: var-safe-gray-5;
 
 .container {
   padding: 1.3em 2em;
