--- a/docs/src/components/HeaderNav/PrimaryNav/logo.css
+++ b/docs/src/components/HeaderNav/PrimaryNav/logo.css
@@ -1,4 +1,4 @@
-@value ( knot-blue ) from '@xo-union/tk-css-colors';
+@value ( var-knot-blue ) from '@xo-union/tk-css-colors';
 
 .container {
   padding: 0.68em 2em;
@@ -6,6 +6,6 @@
 
 .icon {
   composes: icon-tk-logo from '@xo-union/tk-component-icons/lib/legacy';
-  color: knot-blue;
+  color: var-knot-blue;
   font-size: 35px;
 }
