--- a/packages/@xo-union/tk-component-fields/src/css/themes.scss
+++ b/packages/@xo-union/tk-component-fields/src/css/themes.scss
@@ -1,9 +1,10 @@
+@value colors: '@xo-union/tk-css-colors';
 @value (
-  gray-10,
-  background-gray-9,
-  background-gray-8,
-  white
-) from '@xo-union/tk-css-colors';
+  var-gray-10,
+  var-background-gray-9,
+  var-background-gray-8,
+  var-white
+) from colors;
 
 @mixin theme($base, $accent) {
   .field,
@@ -16,7 +17,7 @@
     background-color: $base;
 
     &:disabled {
-      background-color: gray-10;
+      background-color: var-gray-10;
     }
   }
 
@@ -24,6 +25,7 @@
     background-color: $accent;
   }
 }
+
 
 .field {
   composes: field from './styles/field';
@@ -54,9 +56,9 @@
 }
 
 .gray-theme {
-  @include theme(background-gray-9, background-gray-8);
+  @include theme(var-background-gray-9, var-background-gray-8);
 }
 
 .white-theme {
-  @include theme(white, background-gray-9);
+  @include theme(var-white, var-background-gray-9);
 }
