--- a/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
@@ -6,10 +6,13 @@
 .desktop-nav-item-list {
   composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
   composes: justify-content-center from '@xo-union/tk-css-utilities/lib/flexbox';
+
+  /* Temporary hack to deal with non-responsive reality of the header */
+  flex-wrap: nowrap !important;
 }
 
 .mobile-header-nav {
-  composes: knot-blue-bg from '@xo-union/tk-css-colors/lib/utilities';
+  composes: bg-knot-blue from '@xo-union/tk-css-colors';
   composes: nav-text-color from './nav-text-color';
   composes: hide-in-desktop from './hide-utilities';
   composes: has-menu-image from './menu-image';
