--- a/packages/@xo-union/tk-component-header-nav/src/css/menu-border.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/menu-border.scss
@@ -1,3 +1,3 @@
-@value ( background-gray-8 ) from '@xo-union/tk-css-colors';
+@value ( var-background-gray-8 ) from '@xo-union/tk-css-colors';
 
-@value menu-border: 1px solid background-gray-8;
+@value menu-border: 1px solid var-background-gray-8;
