--- a/packages/@xo-union/tk-component-header-nav/src/css/nav-text-color.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/nav-text-color.scss
@@ -1,8 +1,8 @@
-@value ( safe-gray-5 ) from '@xo-union/tk-css-colors';
+@value ( var-safe-gray-5 ) from '@xo-union/tk-css-colors';
 
 .nav-text-color,
 .nav-text-color a,
 .nav-text-color a:not(.not-nav-text-color-hover):hover
 {
-  color: safe-gray-5;
+  color: var-safe-gray-5;
 }
