--- a/packages/@xo-union/tk-component-header-nav/src/css/sub-nav.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/sub-nav.scss
@@ -1,4 +1,4 @@
-@value ( safe-gray-5, knot-blue ) from '@xo-union/tk-css-colors';
+@value ( var-knot-blue ) from '@xo-union/tk-css-colors';
 
 .sub-nav-container {
   composes: base-desktop-nav from './base-desktop-nav';
@@ -7,6 +7,8 @@
 .sub-nav-item-list {
   composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
   composes: justify-content-center from '@xo-union/tk-css-utilities/lib/flexbox';
+
+  flex-wrap: nowrap !important;
 }
 
 .sub-nav-item-link {
@@ -15,7 +17,7 @@
   display: block;
 
   &:hover {
-    color: knot-blue;
+    color: var-knot-blue;
   }
 }
 
