--- a/packages/@xo-union/tk-css-typography/src/modules/font-scales.scss
+++ b/packages/@xo-union/tk-css-typography/src/modules/font-scales.scss
@@ -1,20 +1,12 @@
-.font-up-0   { font-size: $font-up-0; }
-.font-up-1   { font-size: $font-up-1; }
-.font-up-2   { font-size: $font-up-2; }
-.font-up-3   { font-size: $font-up-3; }
-.font-up-4   { font-size: $font-up-4; }
-.font-up-5   { font-size: $font-up-5; }
-.font-up-6   { font-size: $font-up-6; }
-.font-up-7   { font-size: $font-up-7; }
-.font-up-8   { font-size: $font-up-8; }
-.font-up-9   { font-size: $font-up-9; }
-.font-up-10  { font-size: $font-up-10; }
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-.font-down-0 { font-size: $font-down-0; }
-.font-down-1 { font-size: $font-down-1; }
-.font-down-2 { font-size: $font-down-2; }
-.font-down-3 { font-size: $font-down-3; }
-.font-down-4 { font-size: $font-down-4; }
-.font-down-5 { font-size: $font-down-5; }
+    @each $name, $size in $font-sizes {
+      .font#{$infix}-#{$name} {
+        font-size: $size * 1rem !important;
+      }
+    }
+  }
+}
 
-.lh-header { line-height: $headings-line-height; }
