Added Nav-Item spacing classes (#191)

--- a/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
@@ -43,6 +43,8 @@
   nav-item-text,
   nav-link,
   nav-link-with-icon,
+  nav-item-vertical-spacing,
+  nav-item-horizontal-spacing,
   row
 ) from './nav';
 
