--- a/packages/@xo-union/tk-component-footer-nav/src/css/nav.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/nav.scss
@@ -10,9 +10,13 @@
   composes: px-down-1 from '@xo-union/tk-css-spacing';
 }
 
+.nav-item-vertical-spacing {
+  composes: pt-down-2 from '@xo-union/tk-css-spacing';
+}
+
 .nav-item {
-  composes: pt-down-2 from '@xo-union/tk-css-spacing';  
   composes: nav-item-horizontal-spacing;
+  composes: nav-item-vertical-spacing;
   composes: d-md-inline-block from '@xo-union/tk-css-utilities/lib/display';
 }
 
